[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.description }}"
license = "MIT"
name = "{{ cookiecutter.project_slug }}"
packages = [{include = "{{ cookiecutter.project_slug }}"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Django = {extras = ["argon2"], version = "^4.1"}
django-environ = "^0.9.0"
{%- if cookiecutter.use_htmx == 'y' %}
django-htmx = "^1.11.0"
{%- endif %}
psycopg2 = "^2.9.3"
python = "^3.10"
whitenoise = {extras = ["brotli"], version = "^6.1.0"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
coverage = "^6.4"
django-debug-toolbar = "^3.4.0"
pytest-django = "^4.5.2"
rich = "^12.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
