[tool.poetry]
name = "app"
version = "0.1.0"
description = "Behold My Awesome Project!"
authors = [ "Jeff Hutchison <jeff@j3ff.io>" ]
license = "MIT"
readme = "README.md"

[tool.poetry.group.main.dependencies]
python = "^3.12"
django = {extras = ["argon2"], version = "^5.0"}
environs = {extras = ["django"], version = "^11.0"}
{% if cookiecutter.use_crispy_forms -%}
django-crispy-forms = "^2.0"
{% if cookiecutter.css_framework == "bootstrap" -%}
crispy-bootstrap5 = "^2024.0"
{%- endif %}
{%- endif %}
django-htmx = "^1.0"
psycopg  = {extras = ["c", "pool"], version = "^3.0"}
whitenoise = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
django-debug-toolbar = "^4.0"
ipython = "^8.0"
pytest-django = "^4.0"
rich = "^13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py312']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"
python_files = ["test_*.py", "*_test.py"]
